# video-editor

./: .env.example  .gitignore  README.md
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: bca00bf428bd_create_project_and_render_job_tables.py
apps/api/app/: __init__.py  chat_ops.py  db.py  db_models.py  main.py  models.py  render.py  repository.py
apps/api/tests/: conftest.py  test_chat_edit.py  test_chat_ops.py  test_export_async.py  test_narration.py  test_render.py  test_repository.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: clip-list.tsx
apps/web/lib/: api.ts  types.ts
